# InvertedYieldCurveTrader

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  Dockerfile.lambda  PRODUCTION_GUIDE.md  README.md  READY_TO_DEPLOY.md  ROADMAP.md  ROADMAP_TO_RESUME.md  TEST_GUIDE.md  TROUBLESHOOTING_FRED.md  debug_fred  debug_fred.cpp  lambda-binary  run_all_tests.sh  run_unit_tests.sh  test_covariance_calculator_unit  test_data_aligner_unit  test_fred  test_fred_client  test_fred_client.cpp  test_fred_client_integration  test_fred_client_unit  test_fred_processors  test_fred_processors_integration  test_macro_factor_model_unit  test_phase1_integration  test_portfolio_risk_analyzer_unit  test_position_sizer_unit  test_processors  test_processors.cpp  test_surprise_transformer_unit  test_vix_processor  test_vix_processor_integration  test_vix_processor_unit
src/: CMakeCache.txt  CMakeLists.txt  Makefile  MultiVarAnalysisWorkflow.cpp  cmake_install.cmake  main.cpp
src/AwsClients/: DynamoDBClient.cpp  DynamoDBClient.hpp
src/DataProcessors/: ConsumerSentimentProcessor.cpp  ConsumerSentimentProcessor.hpp  CovarianceCalculator.cpp  CovarianceCalculator.hpp  DataAligner.cpp  DataAligner.hpp  FedFundsProcessor.cpp  FedFundsProcessor.hpp  GDPDataProcessor.cpp  GDPDataProcessor.h  GDPDataProcessor.hpp  InflationDataProcessor.cpp  InflationDataProcessor.h  InflationDataProcessor.hpp  InterestRateDataProcessor.cpp  InterestRateDataProcessor.h  InterestRateDataProcessor.hpp  InvertedYieldDataProcessor.cpp  InvertedYieldDataProcessor.h  InvertedYieldDataProcessor.hpp  InvertedYieldStatsCalculator.cpp  InvertedYieldStatsCalculator.hpp  MacroFactorModel.cpp  MacroFactorModel.hpp  PortfolioRiskAnalyzer.cpp  PortfolioRiskAnalyzer.hpp  PositionSizer.cpp  PositionSizer.hpp  S3ObjectRetriever.cpp  S3ObjectRetriever.hpp  StatsCalculator.cpp  StatsCalculator.hpp  StockDataProcessor.cpp  StockDataProcessor.hpp  StockDataRetriever.cpp  StockDataRetriever.hpp  SurpriseTransformer.cpp  SurpriseTransformer.hpp  UnemploymentProcessor.cpp  UnemploymentProcessor.hpp  (+2 more)
src/DataProviders/: FREDDataClient.cpp  FREDDataClient.hpp
src/Utils/: Date.cpp  (+5 more)
(+87 files in other folders)
